Added Fool's Gold Armor and fixed crafting recipes for them.

--- a/src/main/resources/assets/mofmc/lang/en_us.json
+++ b/src/main/resources/assets/mofmc/lang/en_us.json
@@ -22,6 +22,11 @@
   "item.mofmc.ruby_leggings": "Ruby Leggings",
   "item.mofmc.ruby_boots": "Ruby Boots",
 
+  "item.mofmc.fools_gold_helmet": "Fool's Gold Helmet",
+  "item.mofmc.fools_gold_chestplate": "Fool's Gold Chestplate",
+  "item.mofmc.fools_gold_leggings": "Fool's Gold Leggings",
+  "item.mofmc.fools_gold_boots": "Fool's Gold Boots",
+
   "block.mofmc.ruby_block": "Ruby Block",
   "block.mofmc.block_of_raw_ruby": "Block of Raw Ruby",
   "block.mofmc.ruby_ore": "Ruby Ore",
