Working on 1.2.2SPOOKY!

--- a/src/main/resources/assets/mofmc/lang/en_us.json
+++ b/src/main/resources/assets/mofmc/lang/en_us.json
@@ -25,6 +25,7 @@
   "item.mofmc.pyrite_boots": "Pyrite Boots",
 
   "block.mofmc.ruby_ore": "Ruby Ore",
+  "block.mofmc.nether_ruby_ore": "Nether Ruby Ore",
   "block.mofmc.ruby_block": "Block of Ruby",
 
   "block.mofmc.pyrite_ore": "Pyrite Ore",
