--- a/src/main/resources/assets/mofmc/lang/en_us.json
+++ b/src/main/resources/assets/mofmc/lang/en_us.json
@@ -29,6 +29,7 @@
   "block.mofmc.ruby_block": "Block of Ruby",
 
   "block.mofmc.pyrite_ore": "Pyrite Ore",
+  "block.mofmc.nether_pyrite_ore": "Nether Pyrite Ore",
   "block.mofmc.pyrite_block": "Block of Pyrite",
 
   "itemGroup.mofmcTab": "MOFMC"
