Loot Tables and Block of Pyrite

--- a/src/main/resources/assets/mofmc/lang/en_us.json
+++ b/src/main/resources/assets/mofmc/lang/en_us.json
@@ -6,6 +6,7 @@
   "block.mofmc.pyrite_ore": "Pyrite Ore",
 
   "block.mofmc.ruby_block": "Block of Ruby",
+  "block.mofmc.pyrite_block": "Block of Pyrite",
 
   "itemGroup.mofmctab": "MOFMC"
 }
