--- a/src/main/resources/assets/mofmc/lang/en_us.json
+++ b/src/main/resources/assets/mofmc/lang/en_us.json
@@ -3,7 +3,11 @@
   "item.mofmc.pyrite_ingot": "Pyrite Ingot",
 
   "block.mofmc.ruby_ore": "Ruby Ore",
+  "block.mofmc.deepslate_ruby_ore": "Deepslate Ruby Ore",
+  "block.mofmc.nether_ruby_ore:": "Nether Ruby Ore",
   "block.mofmc.pyrite_ore": "Pyrite Ore",
+  "block.mofmc.deepslate_pyrite_ore": "Deepslate Pyrite Ore",
+  "block.mofmc.nether_pyrite_ore": "Nether Pyrite Ore",
 
   "block.mofmc.ruby_block": "Block of Ruby",
   "block.mofmc.pyrite_block": "Block of Pyrite",
