--- a/src/main/resources/assets/mofmc/lang/en_us.json
+++ b/src/main/resources/assets/mofmc/lang/en_us.json
@@ -6,7 +6,7 @@
 
   "block.mofmc.ruby_ore": "Ruby Ore",
   "block.mofmc.deepslate_ruby_ore": "Deepslate Ruby Ore",
-  "block.mofmc.nether_ruby_ore:": "Nether Ruby Ore",
+  "block.mofmc.nether_ruby_ore": "Nether Ruby Ore",
   "block.mofmc.pyrite_ore": "Pyrite Ore",
   "block.mofmc.deepslate_pyrite_ore": "Deepslate Pyrite Ore",
   "block.mofmc.nether_pyrite_ore": "Nether Pyrite Ore",
