--- a/src/main/resources/assets/mofmc/lang/en_us.json
+++ b/src/main/resources/assets/mofmc/lang/en_us.json
@@ -3,6 +3,10 @@
   "item.mofmc.raw_ruby": "Raw Ruby",
   "item.mofmc.pyrite_ingot": "Pyrite Ingot",
   "item.mofmc.raw_pyrite": "Raw Pyrite",
+  "item.mofmc.titanium_rod": "Titanium Rod",
+  "item.mofmc.titanium_dust": "Titanium Dust",
+
+  "item.mofmc.ruby_sword": "Ruby Sword",
 
   "block.mofmc.ruby_ore": "Ruby Ore",
   "block.mofmc.deepslate_ruby_ore": "Deepslate Ruby Ore",
@@ -16,6 +20,7 @@
 
   "block.mofmc.ruby_block": "Block of Ruby",
   "block.mofmc.pyrite_block": "Block of Pyrite",
+  "block.mofmc.titanium_block": "Block of Titanium",
 
   "itemGroup.mofmctab": "MOFMC"
 }
