Working on Improvements...

--- a/src/main/resources/assets/mofmc/lang/en_us.json
+++ b/src/main/resources/assets/mofmc/lang/en_us.json
@@ -89,6 +89,8 @@
   "item.mofmc.double_bladed_blue_light_sword": "Double Bladed Blue Light Sword",
 
   "block.mofmc.titanium_stairs": "Titanium Stairs",
+  "block.mofmc.titanium_slab": "Titanium Slab",
+  "block.mofmc.titanium_pressure_plate": "Titanium Pressure Plate",
 
   "itemGroup.mofmctab": "MOFMC",
   "itemGroup.mofmcadditionalcontenttab": "MOFMC Additional Content"
