Working on Improvements...

--- a/src/main/resources/assets/mofmc/lang/en_us.json
+++ b/src/main/resources/assets/mofmc/lang/en_us.json
@@ -88,6 +88,10 @@
   "item.mofmc.blue_light_sword": "Blue Light Sword",
   "item.mofmc.double_bladed_blue_light_sword": "Double Bladed Blue Light Sword",
 
+  "block.mofmc.ruby_stairs": "Ruby Stairs",
+  "block.mofmc.ruby_slab": "Ruby Slab",
+  "block.mofmc.ruby_pressure_plate": "Ruby Pressure Plate",
+
   "block.mofmc.titanium_stairs": "Titanium Stairs",
   "block.mofmc.titanium_slab": "Titanium Slab",
   "block.mofmc.titanium_pressure_plate": "Titanium Pressure Plate",
